--- a/src/KaCake/bower.json
+++ b/src/KaCake/bower.json
@@ -11,6 +11,7 @@
     "bootstrap-treeview": "v1.2.0",
     "ace": "v1.2.6",
     "tinymce": "scientist-tinymce-dist#4.4.8",
-    "bootstrap-list-filter": "v0.3.2"
+    "bootstrap-list-filter": "v0.3.2",
+    "bootstrap-confirmation2": "v2.4.0"
   }
 }
