--- a/src/KaCake/KaCake.csproj
+++ b/src/KaCake/KaCake.csproj
@@ -46,4 +46,7 @@
   <ItemGroup>
     <ProjectReference Include="..\KaCake.Data\KaCake.Data.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
 </Project>
