master. Implemented commentsgit statusgit statusgit status

--- a/src/KaCake/appsettings.json
+++ b/src/KaCake/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-KaCake-c0d43bf3-4e1d-4d7f-862a-81aef73e749a;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=KaCakeDatabase;Integrated Security=True"
   },
   "Logging": {
     "IncludeScopes": false,
