--- a/src/KaCake.Data/KaCake.Data.csproj
+++ b/src/KaCake.Data/KaCake.Data.csproj
@@ -1,17 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+  
   <PropertyGroup>
+    
     <TargetFramework>netstandard1.4</TargetFramework>
+
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
+    
     <Compile Include="**\*.cs" />
+
     <EmbeddedResource Include="**\*.resx" />
+
   </ItemGroup>
+
   <ItemGroup>
+
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.0" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.0" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.0" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.0" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.0.0-msbuild2-final" />
+
     <PackageReference Include="NETStandard.Library" Version="1.6.1" />
+
   </ItemGroup>
+
 </Project>
