--- a/src/KaCake/KaCake.csproj
+++ b/src/KaCake/KaCake.csproj
@@ -31,6 +31,10 @@
     <!--<Compile Include="View\*.cs" />-->
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="Utils\KaCakeUtils.cs" />
+  </ItemGroup>
+
   <!--<ItemGroup>
     <Compile Remove="wwwroot\**" />
     <Content Remove="wwwroot\**" />
