--- a/src/KaCake/KaCake.csproj
+++ b/src/KaCake/KaCake.csproj
@@ -3,19 +3,28 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <PackageTargetFallback>portable-net45+win8</PackageTargetFallback>
   </PropertyGroup>
-  
+
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.1" />
     <PackageReference Include="sharpcompress" Version="0.15.2" />
   </ItemGroup>
   
@@ -24,11 +33,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="*.cs" />
-    <Compile Include="Controllers\*.cs" />
-    <Compile Include="Services\*.cs" />
-    <Compile Include="ViewModels\**\*.cs" />
-    <!--<Compile Include="View\*.cs" />-->
+    <Compile Include="**\*.cs" Exclude="wwwroot\**\*" />
+    <!--<Content Include="wwwroot"/>
+    <Content Include="App_Data"/>-->
   </ItemGroup>
 
   <!--<ItemGroup>
@@ -38,13 +45,13 @@
     <None Remove="wwwroot\**" />
   </ItemGroup>-->
 
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
+  <!--<ItemGroup>
+    <Folder Include="wwwroot\Testers\" />
   </ItemGroup>
 
   <ItemGroup>
-    <!--<Compile Exclude="wwwroot\*"/>-->
-  </ItemGroup>
+    <Compile Exclude="wwwroot\Submissions\*"/>
+  </ItemGroup>-->
 
   <!--<ItemGroup>
     <Content Remove="wwwroot\Submissions\**" />
