--- a/src/KaCake/appsettings.json
+++ b/src/KaCake/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=KaCakeDatabase;Integrated Security=True"
-    //"DefaultConnection": "Server=tcp:kacakedataserver.database.windows.net,1433;Initial Catalog=KaCake_db;Persist Security Info=False;User ID=KaCakeAdmin;Password=KaCakePassword123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=KaCakeDatabase;Integrated Security=True"
+    "DefaultConnection": "Server=tcp:kacakedataserver.database.windows.net,1433;Initial Catalog=KaCake_db;Persist Security Info=False;User ID=KaCakeAdmin;Password=KaCakePassword123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
