--- a/src/KaCake/appsettings.json
+++ b/src/KaCake/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=KaCakeDatabase;Integrated Security=True"
+    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=NewKaCakeDatabase;Integrated Security=True"
     //"DefaultConnection": "Server=tcp:kacakedataserver.database.windows.net,1433;Initial Catalog=KaCake_db;Persist Security Info=False;User ID=KaCakeAdmin;Password=KaCakePassword123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
